--- a/Application/React/cupid/package.json
+++ b/Application/React/cupid/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@preact/signals-react": "^1.3.6",
     "axios": "^1.5.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
