--- a/Application/React/cupid/package.json
+++ b/Application/React/cupid/package.json
@@ -15,9 +15,11 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.48.2",
     "react-jwt": "^1.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
