--- a/Application/React/cupid/package.json
+++ b/Application/React/cupid/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@preact/signals-react": "^1.3.6",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.5.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
