--- a/Application/React/cupid/package.json
+++ b/Application/React/cupid/package.json
@@ -20,7 +20,8 @@
     "react-hook-form": "^7.48.2",
     "react-jwt": "^1.2.0",
     "react-router-dom": "^6.16.0",
-    "react-swipeable": "^7.0.1"
+    "react-swipeable": "^7.0.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
